// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 1`] = `
<div
  className="mfui-select mfui-select_no-touch test-class test-root-class"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control mfui-select__control_labeled test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-select__combobox"
        data-input="test"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value=""
      />
      <label
        className="mfui-select__label"
        data-label="test"
        htmlFor="1"
      >
        test-label
        <span
          className="mfui-select__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-select__list list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__not-found"
          data-not-found="test"
        >
          Ничего не нашлось
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-select__text"
    data-notice-text="test"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 2`] = `
<div
  className="mfui-select mfui-select_no-touch test-class test-root-class"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control mfui-select__control_labeled test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-select__combobox"
        data-input="test"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value="test-name-1"
      />
      <label
        className="mfui-select__label"
        data-label="test"
        htmlFor="1"
      >
        test-label
        <span
          className="mfui-select__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-select__list list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__not-found"
          data-not-found="test"
        >
          Ничего не нашлось
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-select__text"
    data-notice-text="test"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> key typing handlers calls onChange while typing in the field with debounce 3`] = `
<div
  className="mfui-select mfui-select_open mfui-select_no-touch test-class test-root-class"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control mfui-select__control_labeled test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-select__combobox"
        data-input="test"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value="test-name-1"
      />
      <label
        className="mfui-select__label"
        data-label="test"
        htmlFor="1"
      >
        test-label
        <span
          className="mfui-select__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-select__list list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__list-item mfui-select__list-item_hovered list-item"
          data-list-item="test[1]"
          key="0_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-select__item-title list-item-title"
            data-list-item-title="test[1]"
          >
            <span
              className="mfui-select__highlighted-fragment"
            >
              test-name-1
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-select__text"
    data-notice-text="test"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> key typing handlers highlighted text 1`] = `
<div
  className="mfui-select mfui-select_no-touch test-class test-root-class"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control mfui-select__control_labeled test-control-class"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-select__combobox"
        data-input="test"
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="test-placeholder"
        type="text"
        value="name-1"
      />
      <label
        className="mfui-select__label"
        data-label="test"
        htmlFor="1"
      >
        test-label
        <span
          className="mfui-select__require-mark"
        >
          *
        </span>
      </label>
    </div>
    <div
      className="mfui-select__list list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__not-found"
          data-not-found="test"
        >
          Ничего не нашлось
        </div>
      </div>
    </div>
  </div>
  <div
    className="mfui-select__text"
    data-notice-text="test"
  >
    test-notice-text
  </div>
</div>
`;

exports[`<Select /> keyboard actions handles Tab 1`] = `
<Select
  className="test-class"
  classes={
    Object {
      "control": "test-control-class",
      "list": "list",
      "listItem": "list-item",
      "listItemTitle": "list-item-title",
      "root": "test-root-class",
      "title": "test-title",
      "titleInner": "test-title-inner",
    }
  }
  dataAttrs={
    Object {
      "input": Object {
        "data-input": "test",
        "incorrect-attr": "test",
      },
      "label": Object {
        "data-label": "test",
        "incorrect-attr": "test",
      },
      "listItem": Object {
        "data-list-item": "test",
        "incorrect-attr": "test",
      },
      "listItemTitle": Object {
        "data-list-item-title": "test",
        "incorrect-attr": "test",
      },
      "notFound": Object {
        "data-not-found": "test",
        "incorrect-attr": "test",
      },
      "noticeText": Object {
        "data-notice-text": "test",
        "incorrect-attr": "test",
      },
      "root": Object {
        "data-root": "test",
        "incorrect-attr": "test",
      },
      "title": Object {
        "data-title": "test",
        "incorrect-attr": "test",
      },
    }
  }
  items={
    Array [
      Object {
        "title": "test-name-1",
        "value": 1,
      },
      Object {
        "title": "test-name-2",
        "value": 2,
      },
    ]
  }
  label="test-label"
  labelId="1"
  noticeText="test-notice-text"
  placeholder="test-placeholder"
  required={true}
>
  <div
    className="mfui-select mfui-select_open mfui-select_no-touch test-class test-root-class"
    data-root="test"
  >
    <div
      className="mfui-select__inner"
    >
      <div
        className="mfui-select__control mfui-select__control_labeled test-control-class"
        onKeyDown={[Function]}
      >
        <div
          className="mfui-select__title test-title"
          data-title="test"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="mfui-select__title-inner mfui-select__title-inner_placeholder test-title-inner"
          >
            <div
              className="mfui-select__title-value"
            >
              test-placeholder
            </div>
            <label
              className="mfui-select__label"
              data-label="test"
              htmlFor="1"
            >
              test-label
              <span
                className="mfui-select__require-mark"
              >
                *
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="mfui-select__list list"
      >
        <div
          className="mfui-select__list-inner"
        >
          <div
            className="mfui-select__list-item mfui-select__list-item_hovered list-item"
            data-list-item="test[1]"
            key="0_1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[1]"
            >
              test-name-1
            </div>
          </div>
          <div
            className="mfui-select__list-item list-item"
            data-list-item="test[2]"
            key="1_2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[2]"
            >
              test-name-2
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mfui-select__text"
      data-notice-text="test"
    >
      test-notice-text
    </div>
  </div>
</Select>
`;

exports[`<Select /> keyboard actions handles Tab 2`] = `
<Select
  className="test-class"
  classes={
    Object {
      "control": "test-control-class",
      "list": "list",
      "listItem": "list-item",
      "listItemTitle": "list-item-title",
      "root": "test-root-class",
      "title": "test-title",
      "titleInner": "test-title-inner",
    }
  }
  dataAttrs={
    Object {
      "input": Object {
        "data-input": "test",
        "incorrect-attr": "test",
      },
      "label": Object {
        "data-label": "test",
        "incorrect-attr": "test",
      },
      "listItem": Object {
        "data-list-item": "test",
        "incorrect-attr": "test",
      },
      "listItemTitle": Object {
        "data-list-item-title": "test",
        "incorrect-attr": "test",
      },
      "notFound": Object {
        "data-not-found": "test",
        "incorrect-attr": "test",
      },
      "noticeText": Object {
        "data-notice-text": "test",
        "incorrect-attr": "test",
      },
      "root": Object {
        "data-root": "test",
        "incorrect-attr": "test",
      },
      "title": Object {
        "data-title": "test",
        "incorrect-attr": "test",
      },
    }
  }
  items={
    Array [
      Object {
        "title": "test-name-1",
        "value": 1,
      },
      Object {
        "title": "test-name-2",
        "value": 2,
      },
    ]
  }
  label="test-label"
  labelId="1"
  noticeText="test-notice-text"
  placeholder="test-placeholder"
  required={true}
>
  <div
    className="mfui-select mfui-select_no-touch test-class test-root-class"
    data-root="test"
  >
    <div
      className="mfui-select__inner"
    >
      <div
        className="mfui-select__control mfui-select__control_labeled test-control-class"
        onKeyDown={[Function]}
      >
        <div
          className="mfui-select__title test-title"
          data-title="test"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="mfui-select__title-inner mfui-select__title-inner_placeholder test-title-inner"
          >
            <div
              className="mfui-select__title-value"
            >
              test-placeholder
            </div>
            <label
              className="mfui-select__label"
              data-label="test"
              htmlFor="1"
            >
              test-label
              <span
                className="mfui-select__require-mark"
              >
                *
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="mfui-select__list list"
      >
        <div
          className="mfui-select__list-inner"
        >
          <div
            className="mfui-select__list-item mfui-select__list-item_hovered list-item"
            data-list-item="test[1]"
            key="0_1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[1]"
            >
              test-name-1
            </div>
          </div>
          <div
            className="mfui-select__list-item list-item"
            data-list-item="test[2]"
            key="1_2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[2]"
            >
              test-name-2
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mfui-select__text"
      data-notice-text="test"
    >
      test-notice-text
    </div>
  </div>
</Select>
`;

exports[`<Select /> snapshots it renders with data attributes 1`] = `
<div
  className="mfui-select mfui-select_no-touch"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <div
        className="mfui-select__title"
        data-title="test"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="mfui-select__title-inner mfui-select__title-inner_placeholder"
        >
          <div
            className="mfui-select__title-value"
          />
        </div>
      </div>
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__list-item mfui-select__list-item_hovered"
          data-list-item="test[1]"
          key="0_1"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-select__item-title"
            data-list-item-title="test[1]"
          >
            test-name-1
          </div>
        </div>
        <div
          className="mfui-select__list-item"
          data-list-item="test[2]"
          key="1_2"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-select__item-title"
            data-list-item-title="test[2]"
          >
            test-name-2
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> snapshots renders combobox after update with new prop items 1`] = `
<Select
  className="test-class"
  classes={
    Object {
      "control": "test-control-class",
      "list": "list",
      "listItem": "list-item",
      "listItemTitle": "list-item-title",
      "root": "test-root-class",
      "title": "test-title",
      "titleInner": "test-title-inner",
    }
  }
  dataAttrs={
    Object {
      "input": Object {
        "data-input": "test",
        "incorrect-attr": "test",
      },
      "label": Object {
        "data-label": "test",
        "incorrect-attr": "test",
      },
      "listItem": Object {
        "data-list-item": "test",
        "incorrect-attr": "test",
      },
      "listItemTitle": Object {
        "data-list-item-title": "test",
        "incorrect-attr": "test",
      },
      "notFound": Object {
        "data-not-found": "test",
        "incorrect-attr": "test",
      },
      "noticeText": Object {
        "data-notice-text": "test",
        "incorrect-attr": "test",
      },
      "root": Object {
        "data-root": "test",
        "incorrect-attr": "test",
      },
      "title": Object {
        "data-title": "test",
        "incorrect-attr": "test",
      },
    }
  }
  items={
    Array [
      Object {
        "title": "new-test-name-1",
        "value": 111,
      },
      Object {
        "title": "new-test-name-2",
        "value": 222,
      },
    ]
  }
  label="test-label"
  labelId="1"
  noticeText="test-notice-text"
  placeholder="test-placeholder"
  required={true}
  type="combobox"
>
  <div
    className="mfui-select mfui-select_no-touch test-class test-root-class"
    data-root="test"
  >
    <div
      className="mfui-select__inner"
    >
      <div
        className="mfui-select__control mfui-select__control_labeled test-control-class"
        onKeyDown={[Function]}
      >
        <input
          className="mfui-select__combobox"
          data-input="test"
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="test-placeholder"
          type="text"
          value=""
        />
        <label
          className="mfui-select__label"
          data-label="test"
          htmlFor="1"
        >
          test-label
          <span
            className="mfui-select__require-mark"
          >
            *
          </span>
        </label>
      </div>
      <div
        className="mfui-select__list list"
      >
        <div
          className="mfui-select__list-inner"
        >
          <div
            className="mfui-select__list-item mfui-select__list-item_hovered list-item"
            data-list-item="test[1]"
            key="0_111"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[1]"
            >
              n
              e
              w
              -
              t
              e
              s
              t
              -
              n
              a
              m
              e
              -
              1
            </div>
          </div>
          <div
            className="mfui-select__list-item list-item"
            data-list-item="test[2]"
            key="1_222"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[2]"
            >
              n
              e
              w
              -
              t
              e
              s
              t
              -
              n
              a
              m
              e
              -
              2
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mfui-select__text"
      data-notice-text="test"
    >
      test-notice-text
    </div>
  </div>
</Select>
`;

exports[`<Select /> snapshots renders with default props 1`] = `
<Select
  items={
    Array [
      Object {
        "title": "test-name-1",
        "value": 1,
      },
      Object {
        "title": "test-name-2",
        "value": 2,
      },
    ]
  }
>
  <div
    className="mfui-select mfui-select_no-touch"
  >
    <div
      className="mfui-select__inner"
    >
      <div
        className="mfui-select__control"
        onKeyDown={[Function]}
      >
        <div
          className="mfui-select__title"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="mfui-select__title-inner mfui-select__title-inner_placeholder"
          >
            <div
              className="mfui-select__title-value"
            />
          </div>
        </div>
      </div>
      <div
        className="mfui-select__list"
      >
        <div
          className="mfui-select__list-inner"
        >
          <div
            className="mfui-select__list-item mfui-select__list-item_hovered"
            key="0_1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title"
            >
              test-name-1
            </div>
          </div>
          <div
            className="mfui-select__list-item"
            key="1_2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title"
            >
              test-name-2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</Select>
`;

exports[`<Select /> snapshots renders with props 1`] = `
<Select
  className="test-class"
  classes={
    Object {
      "control": "test-control-class",
      "list": "list",
      "listItem": "list-item",
      "listItemTitle": "list-item-title",
      "root": "test-root-class",
      "title": "test-title",
      "titleInner": "test-title-inner",
    }
  }
  dataAttrs={
    Object {
      "input": Object {
        "data-input": "test",
        "incorrect-attr": "test",
      },
      "label": Object {
        "data-label": "test",
        "incorrect-attr": "test",
      },
      "listItem": Object {
        "data-list-item": "test",
        "incorrect-attr": "test",
      },
      "listItemTitle": Object {
        "data-list-item-title": "test",
        "incorrect-attr": "test",
      },
      "notFound": Object {
        "data-not-found": "test",
        "incorrect-attr": "test",
      },
      "noticeText": Object {
        "data-notice-text": "test",
        "incorrect-attr": "test",
      },
      "root": Object {
        "data-root": "test",
        "incorrect-attr": "test",
      },
      "title": Object {
        "data-title": "test",
        "incorrect-attr": "test",
      },
    }
  }
  items={
    Array [
      Object {
        "title": "test-name-1",
        "value": 1,
      },
      Object {
        "title": "test-name-2",
        "value": 2,
      },
    ]
  }
  label="test-label"
  labelId="1"
  noticeText="test-notice-text"
  placeholder="test-placeholder"
  required={true}
>
  <div
    className="mfui-select mfui-select_no-touch test-class test-root-class"
    data-root="test"
  >
    <div
      className="mfui-select__inner"
    >
      <div
        className="mfui-select__control mfui-select__control_labeled test-control-class"
        onKeyDown={[Function]}
      >
        <div
          className="mfui-select__title test-title"
          data-title="test"
          onClick={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="mfui-select__title-inner mfui-select__title-inner_placeholder test-title-inner"
          >
            <div
              className="mfui-select__title-value"
            >
              test-placeholder
            </div>
            <label
              className="mfui-select__label"
              data-label="test"
              htmlFor="1"
            >
              test-label
              <span
                className="mfui-select__require-mark"
              >
                *
              </span>
            </label>
          </div>
        </div>
      </div>
      <div
        className="mfui-select__list list"
      >
        <div
          className="mfui-select__list-inner"
        >
          <div
            className="mfui-select__list-item mfui-select__list-item_hovered list-item"
            data-list-item="test[1]"
            key="0_1"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[1]"
            >
              test-name-1
            </div>
          </div>
          <div
            className="mfui-select__list-item list-item"
            data-list-item="test[2]"
            key="1_2"
            onClick={[Function]}
            onMouseEnter={[Function]}
          >
            <div
              className="mfui-select__item-title list-item-title"
              data-list-item-title="test[2]"
            >
              test-name-2
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="mfui-select__text"
      data-notice-text="test"
    >
      test-notice-text
    </div>
  </div>
</Select>
`;

exports[`<Select /> snapshots should render items.view as function and type classic 1`] = `
<div
  className="mfui-select mfui-select_no-touch"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <div
        className="mfui-select__title"
        data-title="test"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="mfui-select__title-inner mfui-select__title-inner_placeholder"
        >
          <div
            className="mfui-select__title-value"
          />
        </div>
      </div>
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__list-item mfui-select__list-item_hovered"
          data-list-item="test[1]"
          key="0_111"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          <div
            className="mfui-select__item-title"
            data-list-item-title="test[1]"
          >
            <div>
              view 
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> snapshots should render items.view as function and type combobox 1`] = `
<div
  className="mfui-select mfui-select_no-touch"
  data-root="test"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <input
        className="mfui-select__combobox"
        data-input="test"
        onChange={[Function]}
        onFocus={[Function]}
        type="text"
        value="123"
      />
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      >
        <div
          className="mfui-select__not-found"
          data-not-found="test"
        >
          Ничего не нашлось
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Select /> states of select renders with disabled state 1`] = `
<div
  className="mfui-select mfui-select_disabled mfui-select_no-touch"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <div
        className="mfui-select__title"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="mfui-select__title-inner mfui-select__title-inner_placeholder"
        >
          <div
            className="mfui-select__title-value"
          />
        </div>
      </div>
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      />
    </div>
  </div>
</div>
`;

exports[`<Select /> states of select renders with error state 1`] = `
<div
  className="mfui-select mfui-select_no-touch mfui-select_error"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <div
        className="mfui-select__title"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="mfui-select__title-inner mfui-select__title-inner_placeholder"
        >
          <div
            className="mfui-select__title-value"
          />
        </div>
      </div>
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      />
    </div>
  </div>
  <div
    className="mfui-select__text mfui-select__text_error"
  >
    error
  </div>
</div>
`;

exports[`<Select /> states of select renders with valid state 1`] = `
<div
  className="mfui-select mfui-select_no-touch mfui-select_valid"
>
  <div
    className="mfui-select__inner"
  >
    <div
      className="mfui-select__control"
      onKeyDown={[Function]}
    >
      <div
        className="mfui-select__title"
        onClick={[Function]}
        role="button"
        tabIndex={0}
      >
        <div
          className="mfui-select__title-inner mfui-select__title-inner_placeholder"
        >
          <div
            className="mfui-select__title-value"
          />
        </div>
      </div>
    </div>
    <div
      className="mfui-select__list"
    >
      <div
        className="mfui-select__list-inner"
      />
    </div>
  </div>
  <div
    className="mfui-select__text mfui-select__text_success"
  >
    success
  </div>
</div>
`;
